# DNNMark

./: .gitignore  CMakeLists.txt  Dockerfile_cuda10.2_dnnmark  Dockerfile_cuda11.1  Dockerfile_cuda11.1_dnnmark  Dockerfile_cuda11.3_dn_slim  Justus.ipynb  README.md  VGG.dnnmark  conf_bn_conv_mod.dnntemplate  conf_conv_mod.dnntemplate  conf_multiconv_mod.dnntemplate  dockerbuild.sh  dockerrun.sh  install.sh  install_DNNMark.sh  install_docker_dnnmark.sh  multigpuexec.py  parseDNNMarkFCLogs.py  parseDNNMarkLogs.py  parseDNNMarkLogsMultiMBS.py  parseDNNMarkLogs_algopref.py  parseDNNMarkLogs_debug_algos.ipynb  parseDNNMarkLogs_debug_algos.py  parseDNNMarkLogs_wKeras.py  parsePreloadAlgoLogs.py  rebuild.sh  runConvSeries.py  runConvSeriesMultiMBS.py  runFCSeries.py  runSeries.py  run_dnnmark.sh  run_dnnmark_template.sh  run_series.py  run_series_FC.py  run_series_VGG.py  run_series_algos.py  run_series_chainer_algos.py  run_series_cudnn_prefs.py  run_series_nvprof.py  (+2 more)
benchmarks/: CMakeLists.txt  usage.cc  usage.h
benchmarks/test_VGG/: test_VGG.cc
benchmarks/test_alexnet/: CMakeLists.txt
benchmarks/test_bwd_activation/: test_bwd_activation.cc
benchmarks/test_bwd_bn/: test_bwd_bn.cc
benchmarks/test_bwd_composed_model/: test_bwd_composed_model.cc
benchmarks/test_bwd_conv/: CMakeLists.txt  test_bwd_conv.cc
benchmarks/test_bwd_conv_multibs/: CMakeLists.txt  test_bwd_conv_multibs.cc
benchmarks/test_bwd_dropout/: test_bwd_dropout.cc
benchmarks/test_bwd_fc/: test_bwd_fc.cc
benchmarks/test_composed_model/: CMakeLists.txt  test_composed_model.cc
benchmarks/test_fwd_activation/: CMakeLists.txt  test_fwd_activation.cc
benchmarks/test_fwd_bn/: test_fwd_bn.cc
benchmarks/test_fwd_composed_model/: CMakeLists.txt  test_fwd_composed_model.cc
benchmarks/test_fwd_conv/: test_fwd_conv.cc
benchmarks/test_fwd_conv_multibs/: CMakeLists.txt  test_fwd_conv_multibs.cc
benchmarks/test_fwd_fc/: test_fwd_fc.cc
benchmarks/test_one_layer/: CMakeLists.txt  test_one_layer.cc
config_example/: VGG.dnntemplate  activation_config.dnnmark  bn_config.dnnmark  bn_config.dnntemplate  composed_model_act_config.dnnmark  composed_model_config.dnnmark  conf_convolution_block.dnnmark  conf_convolution_block.dnntemplate  conv_alone_config.dnntemplate  conv_config.dnnmark  conv_config.dnntemplate  fc_config.dnntemplate
core/include/: common.h  data_manager.h  data_png.h  dnn_config_keywords.h  dnn_layer.h  dnn_param.h  dnn_utility.h  dnn_wrapper.h  dnnmark.h  gemm_wrapper.h  simpleCUBLAS.h  timer.h  warmup.h
core/include/layers/: activation_layer.h  bn_layer.h  conv_layer.h  fc_layer.h
core/src/: common.cc  dnn_utility.cc  dnnmark.cc  gemm_wrapper.cc  warmup.cu
dockerfiles/: Dockerfile_cuda11.3_dn_slim  dockerbuild.sh  get_nvidia_versions.sh
lib/: __init__.py  lib.py  lib3.py  plotter.py
tools/: gemm  has_cuda_gpu.c  simpleCUBLAS.cpp
tools/Common/: helper_cuda.h
